# chatgpt-retrieval-plugin

./: pyproject.toml  requirements.txt
server/: main.py
